--- a/.gitignore
+++ b/.gitignore
@@ -12,10 +12,7 @@ __pycache__/
 *.pyc
 *.coverage
 *.egg-info/
-dist/
-build/
 .env
-*.env
 venv/
 ENV/
 env/
@@ -28,39 +25,18 @@ env/
 */migrations/*.pyo
 */migrations/__pycache__/
 
-# Static files (si tu builds React pour production)
+# Static files / Media
 staticfiles/
 media/
-# Optionnel: si tu veux versionner frontend build, ne pas ignorer
-# money-transfer-frontend/dist/
 
-# =====================
 # Node / Vite / React
-# =====================
 node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-lock.yaml
 package-lock.json
-
-# Vite build output
-dist/
 .vite/
 
-# =====================
-# OS / IDE
-# =====================
-.DS_Store
-Thumbs.db
-*.swp
-*.swo
-*.sublime-workspace
-*.sublime-project
-
-# =====================
-# Secrets
-# =====================
-.env
-.env.local
-.env.*.local
+# Versionner le build frontend
+!money-transfer-frontend/dist/
