--- a/requirements.txt
+++ b/requirements.txt
@@ -32,8 +32,10 @@ pyOpenSSL==25.1.0
 pytesseract==0.3.13
 python-decouple==3.8
 redis==6.4.0
+reportlab==4.4.3
 requests==2.32.5
 service-identity==24.2.0
+setuptools==80.9.0
 sqlparse==0.5.3
 Twisted==25.5.0
 txaio==25.6.1
